--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "kanban",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "autotest": "jest --watchAll",
-    "refactor": "jest && npm run bundle && git commit --amend --no-edit -a || git reset --hard",
-    "bundle": "mkdir -p dist && browserify src/*.js > dist/index.js && open-cli index.html"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "browserify": "^16.2.3",
-    "jest": "^24.8.0",
-    "open-cli": "^5.0.0"
-  },
+  "name": "explaining-flow",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "chart.js": "^2.8.0",
-    "jquery": "^3.4.1",
-    "pubsub-js": "^1.7.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
